<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".LatestMessagesActivity">

    <item android:id="@+id/action_my_teams"
          android:icon="@drawable/ic_group_white_24dp"
          android:title="@string/my_teams"
          app:showAsAction="ifRoom"/>

    <item android:id="@+id/action_my_profile"
          android:icon="@drawable/ic_person_white_24dp"
          android:title="@string/my_profile"
          app:showAsAction="ifRoom"/>

    <item android:id="@+id/action_exit"
          android:icon="@drawable/ic_exit_to_app_white_24dp"
          android:title="@string/logout"
          app:showAsAction="ifRoom"/>

</menu>