<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@mipmap/ic_launcher"
            android:id="@+id/logoImageView"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"/>
    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="395dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/emailTextInputLayout"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/logoImageView">
        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_placeholder"
                android:inputType="text"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="395dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/emailTextInputLayout"
            android:id="@+id/passwordTextInputLayout"
            app:passwordToggleEnabled="true">
        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password_placeholder"
                android:inputType="textPassword"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
            android:text="@string/login_button"
            style="@style/AppTheme.RoundedCornerMaterialButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/loginButton"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/passwordTextInputLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:onClick="loginUser"/>
    <com.facebook.login.widget.LoginButton
            android:text="@string/login_with_facebook_button"
            style="@style/FacebookButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/loginFacebookButton"
            android:layout_marginTop="15dp"
            app:layout_constraintTop_toBottomOf="@+id/loginButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:onClick="loginWithFacebook"/>
    <TextView
            android:text="@string/trouble_logging"
            style="@style/CustomTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/troubleLoggingTextView"
            android:layout_marginTop="15dp"
            app:layout_constraintTop_toBottomOf="@+id/loginFacebookButton"
            app:layout_constraintStart_toStartOf="@+id/loginFacebookButton"
            app:layout_constraintEnd_toEndOf="@+id/loginFacebookButton"/>
    <TextView
            android:text="@string/not_yet_registered"
            style="@style/CustomTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/notYetRegisteredTextView"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/registerButton"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"/>
    <Button
            android:text="@string/register"
            style="@style/AppTheme.RoundedCornerMaterialButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/registerButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:onClick="register"/>
</androidx.constraintlayout.widget.ConstraintLayout>