<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.ui.RecoverPasswordActivity">

    <androidx.appcompat.widget.Toolbar
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:theme="@style/CustomToolbar"
            android:background="@drawable/gradient_background"
            android:minHeight="?attr/actionBarSize"
            app:title="@string/recover_password_toolbar"
            android:id="@+id/toolbarRecoverPassword"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:elevation="4dp"/>
    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/emailRecoverPasswordTextInputLayout"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/toolbarRecoverPassword">

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_placeholder"/>
    </com.google.android.material.textfield.TextInputLayout>
    <Button
            android:text="@string/get_recovery_token_button"
            style="@style/AppTheme.RoundedCornerMaterialButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/getRecoveryTokenButton"
            android:onClick="getRecoveryToken"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/emailRecoverPasswordTextInputLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
    <Button
            android:text="@string/enter_token_button"
            style="@style/AppTheme.RoundedCornerMaterialButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/enterTokenButton"
            android:onClick="enterToken"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/getRecoveryTokenButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
    <ProgressBar
            android:id="@+id/recoverPasswordProgressBar"
            style="@style/ProgressBar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>