<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.ui.EditTeamActivity">

    <androidx.appcompat.widget.Toolbar
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:theme="@style/CustomToolbar"
            android:background="@drawable/gradient_background"
            android:minHeight="?attr/actionBarSize"
            android:id="@+id/toolbarEditTeam"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:elevation="4dp"/>
    <androidx.core.widget.NestedScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:fillViewport="true"
            app:layout_constraintTop_toBottomOf="@+id/toolbarEditTeam"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

        <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/editTeamCardView"
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp">
            <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="8dp">

                <de.hdodenhof.circleimageview.CircleImageView
                        style="@style/ProfileImageView"
                        app:civ_border_width="4dp"
                        android:id="@+id/editTeamImageView"
                        app:layout_constraintTop_toTopOf="@+id/editTeamPictureButton"
                        app:layout_constraintEnd_toEndOf="@+id/editTeamPictureButton"
                        app:layout_constraintBottom_toBottomOf="@+id/editTeamPictureButton"
                        app:layout_constraintStart_toStartOf="@+id/editTeamPictureButton"/>

                <Button
                        android:text="@string/new_team_picture_button"
                        style="@style/ProfileImageButton"
                        android:id="@+id/editTeamPictureButton"
                        android:enabled="false"
                        android:onClick="selectImageFromDevice"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:layout_marginTop="8dp"/>

                <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginStart="8dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginEnd="8dp"
                        android:id="@+id/editTeamNameTextInputLayout"
                        android:layout_marginTop="8dp"
                        app:layout_constraintTop_toBottomOf="@+id/editTeamImageView">

                    <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:focusable="false"
                            android:focusableInTouchMode="false"
                            android:hint="@string/new_team_name_placeholder"
                            android:inputType="text"/>
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginStart="8dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginEnd="8dp"
                        android:id="@+id/editTeamDescriptionTextInputLayout"
                        android:layout_marginTop="8dp"
                        app:layout_constraintTop_toBottomOf="@+id/editTeamNameTextInputLayout">

                    <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:focusable="false"
                            android:focusableInTouchMode="false"
                            android:hint="@string/new_team_description_placeholder"
                            android:inputType="textMultiLine"/>
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginStart="8dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginEnd="8dp"
                        android:id="@+id/editTeamWelcomeMessageTextInputLayout"
                        android:layout_marginTop="8dp"
                        app:layout_constraintTop_toBottomOf="@+id/editTeamDescriptionTextInputLayout">

                    <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:focusable="false"
                            android:focusableInTouchMode="false"
                            android:hint="@string/new_team_welcome_message_placeholder"
                            android:inputType="text"/>
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        app:layout_constraintTop_toBottomOf="@+id/editTeamWelcomeMessageTextInputLayout"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginStart="8dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginEnd="8dp"
                        android:id="@+id/editTeamLocationTextInputLayout">

                    <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:focusable="false"
                            android:focusableInTouchMode="false"
                            android:hint="@string/new_team_location_placeholder"
                            android:inputType="text"/>
                </com.google.android.material.textfield.TextInputLayout>
                <Button
                        android:text="@string/edit_team_switch_button"
                        style="@style/AppTheme.RoundedCornerMaterialButton"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/switchTeamButton"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginTop="20dp"
                        app:layout_constraintTop_toBottomOf="@+id/editTeamLocationTextInputLayout"
                        android:onClick="switchTeam"/>
                <Button
                        android:text="@string/edit_team_leave_button"
                        style="@style/AppTheme.RoundedCornerMaterialButton"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:visibility="invisible"
                        android:onClick="leaveTeam"
                        android:id="@+id/leaveTeamButton"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginTop="8dp"
                        app:layout_constraintTop_toBottomOf="@+id/switchTeamButton"/>
                <Button
                        android:text="@string/edit_team_invite_button"
                        style="@style/AppTheme.RoundedCornerMaterialButton"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:visibility="gone"
                        android:onClick="inviteUser"
                        android:id="@+id/inviteTeamButton"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginTop="8dp"
                        app:layout_constraintTop_toBottomOf="@+id/leaveTeamButton"/>
                <Button
                        android:text="@string/edit_channel_remove_user_button"
                        style="@style/AppTheme.RoundedCornerMaterialButton"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:visibility="gone"
                        android:onClick="removeTeamUser"
                        android:id="@+id/removeTeamUserButton"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginTop="8dp"
                        app:layout_constraintTop_toBottomOf="@+id/inviteTeamButton"/>
                <Button
                        android:text="@string/edit_team_delete_button"
                        style="@style/AppTheme.RoundedCornerMaterialButton"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:visibility="gone"
                        android:onClick="deleteTeam"
                        android:id="@+id/deleteTeamButton"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginTop="8dp"
                        app:layout_constraintTop_toBottomOf="@+id/removeTeamUserButton"/>
                <Button
                        android:text="@string/edit_team_edit_button"
                        style="@style/AppTheme.RoundedCornerMaterialButton"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:visibility="gone"
                        android:id="@+id/editTeamButton"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginTop="8dp"
                        app:layout_constraintTop_toBottomOf="@+id/deleteTeamButton" android:onClick="editTeam"/>
                <Button
                        android:text="@string/edit_team_save_button"
                        style="@style/AppTheme.RoundedCornerMaterialButton"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:onClick="saveChangesTeam"
                        android:visibility="gone"
                        android:id="@+id/saveTeamButton"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginTop="8dp"
                        app:layout_constraintTop_toBottomOf="@+id/editTeamButton"/>
                <Button
                        android:text="@string/edit_team_cancel_button"
                        style="@style/AppTheme.RoundedCornerMaterialButton"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:visibility="gone"
                        android:id="@+id/cancelTeamButton"
                        android:onClick="cancelEditTeam"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginTop="8dp"
                        app:layout_constraintTop_toBottomOf="@+id/saveTeamButton"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
    </androidx.core.widget.NestedScrollView>
    <ProgressBar
            android:id="@+id/editTeamProgressBar"
            style="@style/ProgressBar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>